--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <title> HELLO WORLD </title>
+    <title>  </title>
   </head>
     <body>
+      hello world
     </body>
 </html>
