--- a/index.html
+++ b/index.html
@@ -1,8 +1,158 @@
 <html>
-  <head>
-    <title>  </title>
-  </head>
-    <body>
-      hello world
-    </body>
+<head>
+	<title>Maralit, Baron Kristian</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h2><b>BARON KRISTIAN MARALIT</b></h2>
+				<p>2421 Leon Guinto Street
+				<br>Malate, Manila 1004
+				<br>(02)123-4567 ; 123-4567
+				<br>+639956728616
+				<br>baron_maralit@dlsu.edu.ph</p>
+			</div>
+			<div class="col-3">
+				<img src="gawamu.jfif">
+			</div>
+		</div>
+		<hr>
+		<div class="row">
+			<div class="col">
+				<h4><b>OBJECTIVE</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>To join an organization where I can use my skills in personnel administration and attain a high level of performance in personnel recruitment and training.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h4><b>EDUCATION</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p>2015-2019</p>
+			</div>
+			<div class="col">
+				<b><p>DE LA SALLE UNIVERSITY</p></b>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>Bachelor of Science in Civil Engineering with Specialization in Hydraulics and Water Resources, December 2019. Dean’s List: 2nd Term A.Y. 2015-2016, 3rd term A.Y. 2016-2017, 1st to 3rd term A.Y.2017-2018
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p>2011-2015</p>
+			</div>
+			<div class="col">
+				<b><p>BATANGAS STATE UNIVERSITY</p></b>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>High School Diploma, March 2015. Salutatorian.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h4><b>CO-CURRICULAR ACTIVITIES</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p>2009-2010</p>
+			</div>
+			<div class="col">
+				<b><p>RESEARCH AND DEVELOPMENT HEAD, DLSU-COUNCIL OF STUDENT DEVELOPMENT (CSO)</p></b>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>Initiated the following projects: CSO budget defense proposal, needs analysis survey and CSO performance appraisal system. Led the conceptualization, planning and implementation of Shirtfest Variety Show.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p>2011-2012</p>
+			</div>
+			<div class="col">
+				<b><p>PRODUCTION HEAD, DLSU- OFFICE OF CAREER SERVICES</p></b>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>Redesigned and supervised the implementation of the Resume File Service process; increased participation in Resume File Service by 100% and company subscription by 50%
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h4><b>PERSONAL BACKGROUNDS</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p>Fluent in English and Filipino. Knowledgeable in Microsoft programs and Adobe PageMaker. Interests: Cross-stitching, handicraft and desktop publishing. Adaptable, goal-oriented and quality oriented.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h4><b>REFERENCES</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p><b>MARIA EMILIA SEVILIA</b>
+				<br>Engineering Professor
+				<br>987-6543; +639179876543; maria.sevilla@dlsu.edu.ph
+				<br>2401 Taft Ave, Malate, Manila, 1004 Metro Manila.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+				<p></p>
+			</div>
+			<div class="col">
+				<p><b>MARLA REDILLAS</b>
+				<br>Thesis Adviser
+				<br>234-5678; +639172345678; marla.redillas@dlsu.edu.ph
+				<br>2401 Taft Ave, Malate, Manila, 1004 Metro Manila.</p>
+			</div>
+		</div>
+	</div>
+	<a href="https://www.facebook.com/brnmaralit"><img src="download.png"></a>
+	<h5><p>Add/Message me on Facebook!</p></h5>
+</body>
 </html>
